[package]
authors = ["Igaguri <igagurimk@gmail.com>"]
categories = ["development-tools::cargo-plugins"]
description = "A cargo subcommand cleans all projects under specified directory."
edition = "2018"
keywords = ["cargo", "cargo-subcommand"]
license = "MIT OR Apache-2.0"
name = "cargo-clean-recursive"
readme = "README.md"
repository = "https://github.com/IgaguriMK/cargo-clean-recursive"
version = "0.9.7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
bytesize = "1.3.0"
clap = { version = "4.5.21", features = ["derive"] }
